set up react and reactdom. Webpack and Babel

--- a/package.json
+++ b/package.json
@@ -4,5 +4,22 @@
   "description": "React app that creates a battle between two GitHub.com users and let's you know the winner.",
   "main": "index.js",
   "author": "Joe Dooley <hello@developingdesigns.com> (https://www.developingdesigns.com/)",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "production": "webpack -p",
+    "start": "webpack-dev-server"
+  },
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "html-webpack-plugin": "^2.24.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
+  }
 }
