--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "raven-js": "^3.8.0",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
