--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.15.2",
     "raven-js": "^3.8.0",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0"
   },
@@ -21,9 +22,11 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.25.0",
     "flow-bin": "^0.35.0",
     "flow-typed": "^2.0.0",
     "html-webpack-plugin": "^2.24.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
